# otomoto

./: .gitignore  CLAUDE.md  Makefile  README.md  kamper-kryteria.md  kamper-kryteria.xls  pyproject.toml  requirements.md
backend/: Makefile  camper_features.csv  main.py  opis.md  pyproject.toml
backend/app/: config.py  main.py  storage.py
backend/extracted_data/: car_data_ID6EOWO4_latest.json  car_data_ID6FEtKp_latest.json  car_data_ID6Fm0vQ_latest.json  car_data_ID6GHWOt_latest.json  car_data_ID6GRzxB_latest.json  car_data_ID6GSmyZ_latest.json  car_data_ID6GSw1U_latest.json  car_data_ID6GWE2K_latest.json  car_data_ID6GXRwO_latest.json  car_data_ID6GYYl8_latest.json  car_data_ID6GZ07v_latest.json  car_data_ID6Gba3p_latest.json  car_data_ID6GjBNk_latest.json  car_data_ID6H0Jzq_latest.json  car_data_ID6H4tyY_latest.json  car_data_ID6H5Zjd_latest.json  car_data_ID6H6WW2_latest.json  car_data_ID6H7Hh1_latest.json  car_data_ID6HA7KS_latest.json  car_data_ID6HAS4q_latest.json  car_data_ID6HASsW_latest.json  car_data_ID6HAXCa_latest.json  car_data_ID6HApRa_latest.json  car_data_ID6HAstO_latest.json  car_data_ID6HAwgN_latest.json  car_data_ID6HBCJR_latest.json  car_data_ID6HBRU5_latest.json  car_data_ID6HBXGv_latest.json  car_data_ID6HBuAQ_latest.json  car_data_ID6HBwH2_latest.json  car_data_ID6HdHxM_latest.json  car_data_ID6HgxNE_latest.json  car_data_ID6HhIKN_latest.json  car_data_ID6HhPyU_latest.json  car_data_ID6Hhpfy_latest.json  car_data_ID6HigOk_latest.json  car_data_ID6HjNGX_latest.json  car_data_ID6HjWVZ_latest.json  car_data_ID6HjkJA_latest.json  car_data_ID6HknMj_latest.json  (+122 more)
backend/parsed_data/: features_ID6FEtKp_latest.json  features_ID6Fm0vQ_latest.json  features_ID6GRzxB_latest.json  features_ID6GSmyZ_latest.json  features_ID6GSw1U_latest.json  features_ID6H4tyY_latest.json  features_ID6H7Hh1_latest.json  features_ID6HjNGX_latest.json  features_ID6HjWVZ_latest.json  features_ID6Hkr8C_latest.json  features_ID6HlSGH_latest.json  features_ID6HmhPS_latest.json  features_ID6Hmurc_latest.json  features_ID6HnAIq_latest.json  features_ID6HnBqH_latest.json  features_ID6Hnz3h_latest.json  features_ID6Hoih0_latest.json  features_ID6Hp1Vf_latest.json  features_ID6Hq67S_latest.json  (+37 more)
extractor/: .env.example  README.md  __init__.py  export_csv.py  extract_features.py  models.py  pyproject.toml  test_setup.py
(+13 files in other folders)
