[project]
name = "otomoto-integration-tests"
version = "0.1.0"
description = "Integration tests for Otomoto Violentmonkey script"
dependencies = []

[project.optional-dependencies]
test = [
    "playwright>=1.40.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"